[package]
name = "light-verifier-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "light_verifier_sdk"
[patch.crates-io]
solana-program = { path = "../../solana/sdk/program" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
merkle_tree_program = { path = "../light-system-programs/programs/merkle_tree_program", features = ["cpi"] }

ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "0.3.0" }
ark-bn254 = "0.3.0"
ark-std = { version = "^0.3.0", default-features = false }
groth16-solana = {path= "../groth16-solana"}
spl-token = "3.3.0"
# serde = "1.0.145"
borsh = "0.9.3"
