[package]
name = "macro-circom"
version = "0.1.4"
edition = "2021"
description = "Circom DSL providing macros used in Light Protocol"
license = "Apache-2.0"

[build]
rustflags = ["-A", "clippy::all"]

[dependencies]
anyhow = "1.0.71"
heck = "0.4.1"
regex = "1.7.3"
thiserror = "1.0.40"
lalrpop-util = {version="0.20.0" , features = ["lexer"]}
clap = "2"
handlebars = "4.4.0"
syn = {version="1"  , features = ["full", "extra-traits", "parsing"]}
serde_json = "1.0.107"
quote = "1.0.33"
program_structure = {git="https://github.com/iden3/circom", rev="ca3345681549c859af1f3f42128e53e3e43fe5e2"}
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"
serde = "1.0.82"
serde_derive = "1.0.91"

[build-dependencies]
rustc-hex = "2.0.1"
lalrpop = { version = "0.20", features = ["lexer"] }
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"
