[package]
name = "photon-api"
version = "0.29.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Solana indexer for general compression"
license = "Apache-2.0"
edition = "2018"
documentation = "https://www.zkcompression.com"
[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.10", features = ["serde", "v4"] }
log = "0.4.20"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
