[package]
name = "light_protocol_program_v1"
version = "0.1.0"
authors = ["ananas-block <flow23@protonmail.com>", "swen <swen.schaeferjohann@code.berlin>"]
edition = "2018"

[patch.crates-io]
ark-ff = { git = "https://github.com/Lightprotocol/algebra", branch="release-0.3.0" }
ark-bn254 = {git = "https://github.com/Lightprotocol/curves", branch="release-0.3.0"}
ark-ec = { git = "https://github.com/Lightprotocol/algebra", branch="release-0.3.0"}
ark-serialize = { git = "https://github.com/Lightprotocol/algebra", branch="release-0.3.0"}

[features]
no-entrypoint = []
test-bpf = []

[profile.test]
opt-level = 2

[dependencies]
byteorder = "1.3"

#solana
solana-program = "1.7.10"
arrayref = "0.3.6"
borsh = "0.9.1"
getrandom = { version = "0.2.2", features = ["custom"] }
spl-token = { version = "3.2", features = [ "no-entrypoint" ] }


#crypto
ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "0.3.0" }
ark-ed-on-bn254 = { version = "^0.3.0", features = ["r1cs"] }
ark-bn254 = "0.3.0"
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false  }

#poseidon
arkworks-gadgets = "0.3.14"

[dev-dependencies]
solana-program-test = "1.7.12"
solana-sdk = "1.7.12"
serde_json = "1.0.59"
ark-groth16 ={ version = "^0.3.0", default-features = false , features = ["std"]}
ark-serialize = { version = "^0.3.0", default-features = false }

[lib]
crate-type = ["cdylib", "lib"]


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
