[package]
name = "light-sdk"
version = "0.11.0"
description = "Rust SDK for ZK Compression on Solana"
repository = "https://github.com/Lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "light_sdk"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = ["light-heap"]
mem-profiling = []
default = ["custom-heap"]
test-sbf = []
bench-sbf = []
idl-build = ["anchor-lang/idl-build"]
legacy = ["account-compression", "light-system-program"]

[dependencies]
# Solana
solana-program = { workspace = true }

# Anchor
anchor-lang = { workspace = true }

# Math and crypto
num-bigint = { workspace = true }

aligned-sized = { version = "1.1.0", path = "../macros/aligned-sized" }
light-macros = { version = "1.1.0", path = "../macros/light" }
light-sdk-macros = { version = "0.4.0", path = "../macros/light-sdk-macros" }
bytemuck = "1.17"
light-hasher = { version = "1.1.0", path = "../merkle-tree/hasher", features=["solana"] }
light-heap = { version = "1.1.0", path = "../heap", optional = true }
light-indexed-merkle-tree = { workspace = true }
account-compression = { workspace = true , optional = true }
light-system-program = { workspace = true , optional = true }
light-concurrent-merkle-tree = { path = "../merkle-tree/concurrent", version = "1.1.0" }
light-utils = { version = "1.1.0", path = "../utils" }
groth16-solana = "0.0.3"
light-verifier = { path = "../circuit-lib/verifier", version = "1.1.0", features = ["solana"] }
borsh = "0.10.0"

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = { workspace = true }

[dev-dependencies]
solana-banks-interface = { workspace = true }
solana-cli-output = { workspace = true }
solana-program-test = { workspace = true }
serde_json = "1.0.132"
reqwest = "0.12"
tokio = { workspace = true }
light-prover-client = { version = "1.2.0", path = "../circuit-lib/light-prover-client" }
light-merkle-tree-reference = { version = "1.1.0", path = "../merkle-tree/reference/" }
light-indexed-merkle-tree = { version = "1.1.0", path = "../merkle-tree/indexed/" }
num-bigint = "0.4.6"
num-traits = "0.2.19"
lazy_static = "1.4.0"
light-hash-set = { workspace = true, features = ["solana"] }
rand = "0.8.5"
