[package]
name = "light-utils"
version = "0.3.0"
description = "Common utility functions used in Light Protocol"
repository = "https://github.com/Lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ark-ff = "0.4"
light-bounded-vec = { version = "0.3.0", path = "../merkle-tree/bounded-vec" }
num-bigint = { version = "0.4", features = ["rand"] }
thiserror = "1.0"
solana-program = { workspace = true }
ark-bn254 = "0.4.0"
rand = "0.8"

[dev-dependencies]
bytemuck = "1.16"
memoffset = "0.9"
