[package]
name = "light-verifier-sdk"
version = "0.3.1"
description = "SDK for Private Solana Programs"
license = "GPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "light_verifier_sdk"

[features]
atomic-transactions = ["light-merkle-tree-program/atomic-transactions"]

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
light-merkle-tree-program = { version = "0.3.1", path = "../programs/merkle-tree", features = ["cpi"] }

aligned-sized = { version = "0.1.0", path = "../macros/aligned-sized" }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "0.3.0" }
ark-bn254 = "0.3.0"
ark-std = { version = "^0.3.0", default-features = false }
spl-token = "3.3.0"
borsh = "0.9.3"
groth16-solana = "0.0.2"
light-utils = { path = "../utils", version = "0.1.0" }
light-merkle-tree = { path = "../merkle-tree", version = "0.1.1" }
