[package]
name = "xtask"
version = "1.1.0"
edition = "2021"

[dependencies]
account-compression = { workspace = true }
anyhow = "1.0"
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
clap = { version = "4", features = ["derive"] }
groth16-solana = "0.0.3"
light-concurrent-merkle-tree = { workspace = true }
light-hash-set = { workspace = true }
light-hasher = { workspace = true }
light-indexed-merkle-tree = { workspace = true }
light-compressed-account = { workspace = true }
light-utils = { workspace = true }
light-merkle-tree-metadata = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
quote = "1.0"
sha2 = "0.10"
solana-program = { workspace = true }
tabled = "0.17"
light-test-utils = { workspace = true }
tokio = { workspace = true }
solana-sdk = { workspace = true }
light-program-test = { workspace = true }
light-client = { workspace = true }
dirs = "6.0"
serde_json = "1.0.139"
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
