[package]
name = "xtask"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
account-compression = { workspace = true }
anyhow = "1.0"
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
groth16-solana = { workspace = true }
light-concurrent-merkle-tree = { workspace = true }
light-hash-set = { workspace = true }
light-hasher = { workspace = true, features = ["poseidon"] }
light-indexed-merkle-tree = { workspace = true }
light-compressed-account = { workspace = true, features = ["std"] }
light-merkle-tree-metadata = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
quote = "1.0"
sha2 = "0.10"
solana-program = { workspace = true }
tabled = "0.20"
light-test-utils = { workspace = true }
tokio = { workspace = true }
solana-sdk = { workspace = true }
light-program-test = { workspace = true }
light-client = { workspace = true }
dirs = "6.0"
serde_json = "1.0.140"
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
light-batched-merkle-tree = { workspace = true }
light-registry = { workspace = true }
