[package]
name = "light-wasm"
version = "0.1.0"
edition = "2021"
description = "Light Protocol Rust client"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
light-poseidon = { git = "https://github.com/Lightprotocol/light-poseidon", branch = "main"}
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ['console'] }
hex = { version = "0.4.3", features = [] }
blake2b_simd = "1"
aes-gcm-siv = "0.10.3"
bs58 = "0.5.0"
crypto_box = "0.7.1"
zeroize = { version = "1.3", default-features = false }
num-bigint = "0.4.4"
#num-derive = "0.4"
num-traits = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
opt-level = 's'