[package]
name = "webassembly"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

ark-relations = { version = "^0.3.0", default-features = false  }
ark-crypto-primitives = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
tracing-subscriber = { version = "0.2" }
ark-std = { version = "^0.3.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }

ark-groth16 = {version = "0.3.0", default-features = false, features = [ "r1cs", "ark-r1cs-std", "tracing", "derivative", "std" ] }
ark-bls12-381 = { version = "^0.3.0" }

console_error_panic_hook = "0.1.6"
ark-ff = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-sponge = { version = "^0.3.0" }

ark-serialize = { version = "^0.3.0", default-features = false }

js-sys = "0.3.55"
wasm-bindgen = "0.2.56"
wasm-gc = "0.1.6"

ark-ec = { version = "0.3.0" }
# for tests
num-traits = "0.2.8"
zeroize = "1.4.2"
derivative = "2.2.0"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
