[package]
name = "light-system-program-anchor"
version = "1.2.0"
description = "ZK Compression on Solana"
repository = "https://github.com/Lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "light_system_program"
[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = ["readonly", "idl-build"]
idl-build = ["anchor-lang/idl-build"]
readonly = []
test-sbf = []


[dependencies]
aligned-sized = { workspace = true }
anchor-lang = { workspace = true }
account-compression = { workspace = true }
light-compressed-account = { workspace = true, features = ["anchor"] }
solana-security-txt = "1.1.0"
light-zero-copy = { workspace = true, features = ["anchor"] }
zerocopy = { workspace = true }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
