[package]
name = "light-system-program-anchor"
version = "2.0.0"
description = "ZK Compression on Solana"
repository = "https://github.com/Lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "light_system_program"
[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []


[dependencies]
aligned-sized = { workspace = true }
anchor-lang = { workspace = true }
account-compression = { workspace = true, features = ["cpi"] }
light-compressed-account = { workspace = true, features = ["new-unique"] }
light-zero-copy = { workspace = true }
zerocopy = { workspace = true }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
