[package]
name = "circuitlib-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

# light local deps
# ark-zkey = { path = "../../../mopro/ark-zkey" }
# witness = { path = "../../../circom-witness-rs" }
light-merkle-tree-reference =  { path = "../../merkle-tree/reference"}
light-hasher = { path = "../../merkle-tree/hasher" }

# ark dependencies
ark-circom = { git = "https://github.com/Lightprotocol/circom-compat.git", branch = "feat/multi-dimension-input" }
ark-serialize = "0.4.2"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-relations = "0.4"
ark-bn254 = { version = "0.4" }
ark-std = { version = "0.4", default-features = false, features = ["parallel"] }
ark-groth16 = { version = "0.4", default-features = false, features = ["parallel"] }
ark-crypto-primitives = { version = "0.4" }

# solana
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana.git" }
solana-program = "^1.17"

num-bigint = "=0.4.4"
once_cell = "1.8"

thiserror = "1.0"
color-eyre = "=0.6.2"
log = "0.4"
env_logger = "0.10.2"
# 1.3.0 required by package `aes-gcm-siv v0.10.3`
zeroize = "=1.3.0"
