[package]
name = "circuitlib-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

# light local deps
light-merkle-tree-reference = { path = "../../merkle-tree/reference" }
light-hasher = { path = "../../merkle-tree/hasher" }
light-indexed-merkle-tree = { path = "../../merkle-tree/indexed" }
light-utils = { path = "../../utils" }
# ark dependencies
ark-circom = { git = "https://github.com/Lightprotocol/circom-compat.git", branch = "feat/multi-dimension-input" }
ark-serialize = "0.4.2"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-relations = "0.4"
ark-bn254 = { version = "0.4" }
ark-std = { version = "0.4", default-features = false, features = ["parallel"] }
ark-groth16 = { version = "0.4", default-features = false, features = ["parallel"] }
ark-crypto-primitives = { version = "0.4" }

bytemuck = "1.14.3"

# solana
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana.git" }
solana-program = "^1.17"

#num-bigint = "=0.4.4"
num-bigint = { version = "0.4.4", features = ["serde"] }

once_cell = "1.8"

thiserror = "1.0"
color-eyre = "=0.6.2"
log = "0.4"
env_logger = "0.10.2"
# 1.3.0 required by package `aes-gcm-siv v0.10.3`
zeroize = "=1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
num-traits = "0.2.18"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt", "macros"] }
reqwest = {  version = "0.11.24", features = ["json", "rustls-tls"] }
duct = "0.13.7"