[package]
name = "light-prover-client"
version = "1.2.0"
description = "Crate for interacting with Light Protocol circuits"
repository = "https://github.com/Lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[features]
gnark = ["tokio", "reqwest"]
default = ["gnark"]

[dependencies]

# light local deps
light-merkle-tree-reference = { path = "../../merkle-tree/reference", version = "1.1.0" }
light-hasher = { path = "../../merkle-tree/hasher", version = "1.1.0" }
light-indexed-merkle-tree = { path = "../../merkle-tree/indexed", version = "1.1.0" }
light-concurrent-merkle-tree = { path = "../../merkle-tree/concurrent", version = "1.1.0" }
light-bounded-vec = { path = "../../merkle-tree/bounded-vec", version = "1.1.0" }
light-utils = { path = "../../utils", version = "1.1.0" }
# ark dependencies
ark-serialize = "0.4.2"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-relations = "0.4"
ark-bn254 = { version = "0.4" }
ark-std = { version = "0.4", default-features = false, features = ["parallel"] }
ark-groth16 = { version = "0.4", default-features = false, features = ["parallel"] }
ark-crypto-primitives = { version = "0.4" }

bytemuck = "1.17.0"

# solana
groth16-solana = "0.0.3"
solana-program = { workspace = true }
num-bigint = { version = "0.4.6", features = ["serde"] }

once_cell = "1.8"
thiserror = "1.0"
color-eyre = "=0.6.3"
log = "0.4"
env_logger = "0.11.2"
# 1.3.0 required by package `aes-gcm-siv v0.10.3`
zeroize = "=1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
num-traits = "0.2.19"
tokio = { workspace = true, optional = true }
reqwest = {  version = "0.11.24", features = ["json", "rustls-tls"], optional = true  }
sysinfo = "0.31"
borsh = ">=0.9, <0.11"
[dev-dependencies]
duct = "0.13.7"
