[package]
name = "light-verifier"
version = "0.1.0"
edition = "2021"
[features]
solana = ["solana-program"]

[dependencies]
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana.git", branch="master" }
thiserror = "1.0"
borsh = "0.10"
solana-program = { version = "1.18.11", optional = true }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt", "macros"] }
reqwest = {  version = "0.11.24", features = ["json", "rustls-tls"]  }
light-circuitlib-rs = { path = "../circuitlib-rs" }