[package]
name = "light-verifier"
version = "0.3.0"
description = "ZKP proof verifier used in Light Protocol"
repository = "https://github.com/Lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[features]
solana = ["solana-program"]

[dependencies]
groth16-solana = "0.0.3"
thiserror = "1.0"
borsh = "0.10"
solana-program = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = {  version = "0.11.24", features = ["json", "rustls-tls"]  }
light-prover-client = { path = "../light-prover-client", version = "0.3.0" }
