[package]
name = "aligned-sized"
version = "0.3.0"
description = "A macro which ensures the alignment and calculates the size of a struct"
repository = "https://github.com/Lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
